@@ -1,6 +1,6 @@
 Package: R2jags
-Version: 0.01-27
-Date: 2009-11-9
+Version: 0.01-28
+Date: 2009-12-14
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <ys463@columbia.edu>, Masanao Yajima
         <yajima@stat.columbia.edu>,
@@ -9,6 +9,3 @@ Depends: methods, R(>= 2.7.0), coda, R2WinBUGS, rjags(>= 1.0.3-8)
 SystemRequirements: jags (>= 1.0.3)
 Description: Using this package to call jags from R.
 License: GPL (>= 2)
-Packaged: 2009-11-11 18:20:27 UTC; yusung
-Repository: CRAN
-Date/Publication: 2009-11-12 11:36:57
